--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,15 +27,17 @@ h1 {
     text-align: center;
     width: 280px;
     height: 60px;
+}
+
+h2, h3 {
     color: white;
 }
 
-h2 {
-    color: white;
+.row-area1 {
 }
 
-h3 {
-    color: white;
+.row-area2 {
+    margin-top: 270px;
 }
 
 #computer-number {
@@ -46,15 +48,17 @@ h3 {
     height: 200px;
     color: white;
     float: left;
+    margin-right: 15px;
 }
 
 #winsandlosses {
     float: left;
-    padding: 10px;
+    padding-left: 30px;
+    padding-top: 80px;
     background-color: darkred;
     color: white;
     width: 100px;
-    height: 200px;
+    height: 140px;
 }
 
 #crystal1, #crystal2, #crystal3, #crystal4 {
@@ -62,6 +66,22 @@ h3 {
     height: 100px;
 }
 
-#player-score-sum {
+#total-score-letters {
+    background-color: blue;
     color: white;
+    height: 40px;
+    width: 220px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    padding-top: 20px;
+}
+
+#player-score-sum {
+    background-color: blue;
+    font-size: 40pt;
+    color: white;
+    height: 200px;
+    width: 200px;
+    margin-bottom: 15px;
+    padding: 10px;
 }
